--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
+    "dotenv": "^16.4.7",
     "socket.io": "^4.8.1"
   }
 }
