--- a/package.json
+++ b/package.json
@@ -10,23 +10,35 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^1.2.1",
+    "@clerk/nextjs": "^6.14.2",
+    "@clerk/themes": "^2.2.30",
     "@hookform/resolvers": "^4.1.3",
+    "@radix-ui/react-accordion": "^1.2.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.7",
     "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-progress": "^1.1.3",
+    "@radix-ui/react-select": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tabs": "^1.1.4",
+    "@uiw/react-md-editor": "^4.0.5",
     "@vapi-ai/web": "^2.2.4",
     "ai": "^4.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "firebase": "^11.5.0",
     "firebase-admin": "^13.2.0",
+    "html2pdf.js": "^0.10.3",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
+    "react-hook-form": "^7.55.0",
     "react-speech-recognition": "^4.0.0",
+    "react-spinners": "^0.15.0",
+    "recharts": "^2.15.2",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
