--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
+    "react-markdown": "^10.1.0",
     "react-speech-recognition": "^4.0.0",
     "react-spinners": "^0.15.0",
     "recharts": "^2.15.2",
